//  Copyright (c) 2021, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
//
//  WSO2 Inc. licenses this file to you under the Apache License,
//  Version 2.0 (the "License"); you may not use this file except
//  in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing,
//  software distributed under the License is distributed on an
//  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
//  KIND, either express or implied.  See the License for the
//  specific language governing permissions and limitations
//  under the License.

syntax = "proto3";

package wso2.discovery.api;

import "wso2/discovery/api/endpoint_cluster.proto";
import "wso2/discovery/api/Resource.proto";
import "wso2/discovery/api/endpoint_security.proto";
import "wso2/discovery/api/security_scheme.proto";
import "wso2/discovery/api/backend_jwt_configuration.proto";
import "wso2/discovery/api/choreo_component_info.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/api;api";
option java_package = "org.wso2.choreo.connect.discovery.api";
option java_outer_classname = "ApiProto";
option java_multiple_files = true;

// [#protodoc-title: Api]

// API config model
message Api {
	string id = 1;
	string title = 2;
	string version = 3;
	string apiType = 4;
	string description = 5;
	EndpointCluster productionEndpoints = 6;
	EndpointCluster sandboxEndpoints = 7;
	repeated Resource resources = 8;
	string basePath = 9;
	string tier = 10;
	string apiLifeCycleState = 11;
	repeated SecurityScheme securityScheme = 12;
	repeated SecurityList security = 13;
	EndpointSecurity endpointSecurity = 14;
	string authorizationHeader = 15;
	string apiKeyHeader = 16;
	bool disableSecurity = 17;
	string vhost = 18;
	string organizationId = 19;
	string apiProvider = 20;
	bool enableBackendJWT = 21;
	string deploymentType = 22;
	string environmentId = 23;
	string environmentName = 24;
	BackendJWTConfiguration backendJWTConfiguration = 25;
	ChoreoComponentInfo choreoComponentInfo = 26;
}
