syntax = "proto3";

package wso2.discovery.api;

import "wso2/discovery/api/Endpoint.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/api;api";
option java_package = "org.wso2.gateway.discovery.api";
option java_outer_classname = "ResourceProto";
option java_multiple_files = true;

// [#protodoc-title: Resource]

// Resource config model
message Resource {
	string id = 1;
	string path = 2;
	repeated Operation methods = 3;
	string summary = 4;
	string description = 5;
	repeated Endpoint productionUrls = 6;
	repeated Endpoint sandboxUrls = 7;
	map<string, string> security = 8;
	repeated string consumes = 9;
	repeated string schemes = 10;
	repeated string tags = 11;
}

// Operation model which maps to a particular http methods
message Operation {
    string method = 1;
    repeated SecurityList security = 2;
    string tier = 3;
    bool disableSecurity = 4;
}

// Holds the array of security schemas defined for particular API operation
message SecurityList {
    map<string, Scopes> scopeList = 1;
}

// Holds the list of scopes belongs to a particular security schema
message Scopes {
    repeated string scopes = 1;
}
